# privateMessengerApp-backend

./: .env.example  .gitignore  Makefile  alembic.ini  fix_imports.py  fix_types.py  pyproject.toml  railway.toml  schema.dbml
alembic/: env.py
alembic/versions/: .gitkeep  a1b2c3d4e5f6_private_number_auth.py  a7b8c9d0e1f2_calls.py  a8b9c0d1e2f3_message_history_index.py  b2c3d4e5f6a7_user_public_key.py  b3c4d5e6f7a8_document_message_type.py  c3d4e5f6a7b8_conversation_prefs.py  c9d0e1f2a3b4_perf_indexes.py  cb4c68125d29_initial.py  d0e1f2a3b4c5_user_bio.py  d4e5f6a7b8c9_messages_c2.py  e1f2a3b4c5d6_message_media_blob.py  e5f6a7b8c9d0_message_delete.py  f2a3b4c5d6e7_conversation_direct_key.py  f6a7b8c9d0e1_media_blobs.py  f7a8b9c0d1e2_media_blob_updated_at.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  account_deletion.py  auth.py  calls.py  (+9 more)
app/core/: config.py  dependencies.py  limiter.py  private_number.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  call.py  contact.py  conversation.py  conversation_pref.py  deleted_message.py  device.py  media_blob.py  message.py  message_reaction.py  session.py  starred_message.py  user.py
app/schemas/: auth.py  common.py  device.py  messaging.py
app/services/: auth_service.py  device_service.py  maintenance.py  media_storage.py  push_service.py
app/websocket/: manager.py  router.py  throttle.py  user_router.py
tests/: conftest.py  test_auth.py  test_conversations_and_devices.py  test_devices.py  test_health.py  test_maintenance.py  test_media_lifecycle.py  test_profile.py  test_webrtc.py  test_websocket.py
