[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "private-messenger-backend"
version = "0.1.0"
description = "Private Messenger App — FastAPI Backend"
requires-python = ">=3.9"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database (async)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Redis (async)
    "redis[asyncio]>=5.0.0",

    # Config & env
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Rate limiting
    "slowapi>=0.1.9",

    # AWS (OTP via SNS)
    "boto3>=1.34.0",

    # HTTP client (internal use + tests)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",     # In-memory SQLite for tests
    "fakeredis>=2.20.0",     # In-memory Redis for tests
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",           # Linter + formatter
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
